--- a/src/index.css
+++ b/src/index.css
@@ -583,10 +583,14 @@ body{
   /* Style the buttons */
   #myBtnContainer{
     display: flex;
+    align-items: center;
     justify-content: center;
     margin: 0 auto;
     width: 100%;
     gap: 5px;
+}
+.index-projects{
+    color: #F2F2F2;
 }
   .btn {
     border: none;
@@ -644,7 +648,7 @@ body{
 /* ----------------- CONTACT SECTION ----------------- */
 
 .contact-section{
-    background-image: url(img/3drender2.webp);
+    background-image: url(https://coihsan.github.io/iseng/assets/3drender2.webp);
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
