--- a/src/index.css
+++ b/src/index.css
@@ -984,6 +984,27 @@ input::-webkit-inner-spin-button {
     grid-template-columns: repeat(3, 1fr);
     gap: 10px;
 }
+.list-item{
+   /* min-height: 300px; */
+   background-color: #161B22;
+   padding: 1rem;
+   border-radius: 10px;
+   color: var(--text-primary-color);
+}
+.aticle-desc-in-index{
+    margin: 10px 0;
+    color: var(--text-secondary-color)
+}
+.index-item-footer{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 14px;
+    margin-bottom: 20px;
+}
+.index-item-footer *{
+    color: var(--text-secondary-color);
+}
 @media only screen and (min-width: 600px){
     .progressbar-section{
         grid-template-columns: 1fr;
