--- a/src/index.css
+++ b/src/index.css
@@ -1011,6 +1011,11 @@ input::-webkit-inner-spin-button {
 .index-item-footer *{
     color: var(--text-secondary-color);
 }
+.topic-category{
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
 @media only screen and (min-width: 600px){
     .progressbar-section{
         grid-template-columns: 1fr;
