--- a/src/index.css
+++ b/src/index.css
@@ -1023,6 +1023,9 @@ input::-webkit-inner-spin-button {
         gap: 20px;
     }
 }
+@media screen and (max-width: 600px) {
+    .index-article{grid-template-columns: 1fr;}
+}
 @media screen and (max-width: 880px){
     .header{
         height: 50px;
