--- a/src/index.css
+++ b/src/index.css
@@ -69,15 +69,7 @@ body{
 .transition:hover{
     transform: scale(0.95);
 }
-@font-face {
-    font-family: mySignatureFont;
-    src: url(Bhenay\ Signature.ttf);
-  }
-  .signature{
-    font-family: 'mySignatureFont';
-    font-size: 2.5rem;
-    margin-top: 20px;
-  }
+
 .section{
     padding: 80px 15px;
 }
@@ -106,18 +98,15 @@ body{
     position: fixed;
     top: 0;
     left: 0;
-    background: rgba(1, 4, 9, 0.88);
+    background: rgba(1, 4, 9, 0.58);
     width: 100%;
     height: 100vh;
-    z-index: 2200;
-    opacity: 0;
-    visibility: hidden;
+    z-index: 200;
     transition: all 0.3s ease-in-out;
+    display: flex;
+    justify-content: center;
 }
-.modal.is-visible{
-    opacity: 1;
-    visibility: visible;
-}
+
 .modal-dialog{
     max-width: 800px;
     max-height: 90vh;
@@ -126,25 +115,7 @@ body{
     padding: 2rem;
     border-radius: 10px;
     overflow-y: auto;
-}
-
-[data-animation] .modal-dialog {
-    opacity: 0;
-    transition: all 0.3s var(--bounceEasing);
-  }
-  
-  [data-animation].is-visible .modal-dialog {
-    opacity: 1;
-    transition-delay: 0.2s;
-  }
-  
-  [data-animation="slideInOutLeft"] .modal-dialog {
-    transform: translate(-150%);
-  }
-  
-  [data-animation="slideInOutLeft"].is-visible .modal-dialog{
-    transform: none;
-  }  
+}  
 
   .open-modal,
   .close-modal{
